tests/ui/parser/issues/issue-81806.rs
trait T {
const //~ ERROR: const trait impls are experimental
impl
} //~ ERROR: expected type, found `}`

fn main() {}
